hphp/hack/test/typecheck/control_flow/do_break_undefined.php.exp
File "do_break_undefined.php", line 11, characters 10-11:
Variable $s is undefined, or not always defined (did you mean $i instead?) (Naming[2050])
